--- a/style.css
+++ b/style.css
@@ -25,10 +25,10 @@ body{
     box-shadow: 1px 1px 1px #ccc;
 }
 
-.img_container{
+/* .img_container{
     margin:
     
-}
+} */
 
 .text_container{
     /* border: 2px solid blue; */
@@ -49,4 +49,5 @@ img{
 .sub{
     color: var(--gray_blue);
     text-align: center;
+    
 }
